tests/ui/impl-trait/precise-capturing/duplicated-use.real.stderr
error: duplicate `use<...>` precise capturing syntax
  --> $DIR/duplicated-use.rs:5:32
   |
LL | fn hello<'a>() -> impl Sized + use<'a> + use<'a> {}
   |                                ^^^^^^^   ------- second `use<...>` here

error: aborting due to 1 previous error

